--- a/fpl-live/.env
+++ b/fpl-live/.env
@@ -1,5 +1,5 @@
 VITE_FPL_BASE_URL=https://fantasy.premierleague.com/api
 # ChatGPT API configuration
 VITE_OPENAI_API_URL=https://api.openai.com/v1/chat/completions
-VITE_OPENAI_API_KEY=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           # your real key from https://platform.openai.com/
+VITE_OPENAI_API_KEY=           # your real key from https://platform.openai.com/
 VITE_OPENAI_MODEL=gpt-4o-mini            # fast + affordable for chat
